# deda-drug-evaluation-and-discovery-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD_INSTRUCTIONS.md  CI_CD_SETUP.md  CONTRIBUTING.md  Dockerfile  PRECOMMIT_OPTIMIZATION_PLAN.md  README.md  SNAPSHOT_TESTING_PLAN.md  UNIFIED_SNAPSHOT_SYSTEM.md  chat_inference.py  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  synthetic_training_data_generator.py  synthetic_training_data_generator_chat_format.py  synthetic_training_data_generator_instruction_format.py  train_data_chatml_format.jsonl  train_data_instruction_format.jsonl  train_model.py
.github/workflows/: main-checks.yml
assets/: icon.icns
electron-app/: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js  settings-panel.js
electron-app/api-key/: api-key-modal.js  key-status.js  startup-flow.js  toast-manager.js
electron-app/config/: constants.js
electron-app/scripts/: start-electron-dev.js  start-python-backend.js
electron-app/src/: index.html  renderer.js  styles.css
electron-app/views/: agent-mode.js  api-key-settings.html  constants.js  index.html  renderer.js  styles.css
examples/: disease_to_uniprot.py
helm/: README.md
helm/deda/: Chart.yaml  values.yaml
helm/deda/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/deda/templates/tests/: test-connection.yaml
mcp/: README.md  requirements.txt  server.py
mcp/boltz/: client.py  server.py
mcp/docker/: Dockerfile  Readme.md  entrypoint.sh
snapshots/: README.md  __init__.py  http_interceptor.py  manager.py  metadata.json
snapshots/ebi/: ebi_api_search_Alzheimer_efo_8af4364aaa25b8da.json
snapshots/misc/: misc_api_get_250ccde16e2b.txt  misc_api_get_c37a1d123b6a.json  misc_api_get_c37a1d123b6a.txt
snapshots/opentargets/: opentargets_api_post_53fb6d906e52.json  opentargets_api_post_5ec967fcc117.json  opentargets_api_post_9a85278ce6ee.json  opentargets_api_post_c1c69d8019ae.json
snapshots/pdb/: pdb_api_get_3076f01ba35c.json  pdb_api_get_41efe8534871.json
snapshots/uniprot/: uniprot_api_get_29f7824e851a.txt  uniprot_api_get_79ca7940593c.json
src/: __init__.py
src/core/: __init__.py  analysis.py  pdb.py  uniprot.py
src/drug_discovery_agent/: __init__.py  chat.py  config.py
src/drug_discovery_agent/chat_server/: __init__.py  __main__.py  models.py  server.py  session_manager.py
src/drug_discovery_agent/core/: __init__.py  alphafold.py  analysis.py  common.py  ebi.py  opentarget.py  pdb.py  uniprot.py
src/drug_discovery_agent/core/denovo/: preprocessor.py
src/drug_discovery_agent/interfaces/: __init__.py
src/drug_discovery_agent/interfaces/langchain/: agent_graph.py  agent_mode_chat_client.py  agent_state.py  chat_client.py  executor.py  models.py  planner.py  tools.py
src/drug_discovery_agent/interfaces/mcp/: __init__.py  client.py  server.py  tools.py
src/drug_discovery_agent/key_storage/: __init__.py  key_manager.py  storage_fallback.py  validation.py
src/drug_discovery_agent/settings/api_key/: __init__.py  models.py  settings.py
src/drug_discovery_agent/utils/: __init__.py  constants.py  env.py  http_client.py
src/interfaces/: __init__.py
src/interfaces/chat/: __init__.py  chat_client.py  tools.py
src/interfaces/mcp/: __init__.py
src/interfaces/mcp/boltz/: __init__.py  client.py  server.py
src/utils/: constants.py  http_client.py
tests/: __init__.py  conftest.py  test_chat.py  test_chat_server.py
tests/auth/: __init__.py  test_api_endpoints.py  test_api_key_storage.py  test_storage_fallback.py  test_validation.py
tests/core/: test_alphafold.py  test_analysis.py  test_denovo.py  test_ebi.py  test_opentarget.py  test_pdb.py  test_uniprot.py
tests/fixtures/: README.md  __init__.py  ebi_snapshots.py  env_helpers.py  http_helpers.py  mock_clients.py  mock_http_server.py  sample_data.py
tests/integration/: __init__.py  test_agent_mode_workflow.py  test_api_key_integration.py
tests/interfaces/: __init__.py
tests/interfaces/langchain/: __init__.py  test_agent_graph.py  test_chat_client.py  test_executor.py  test_planner.py  test_tools.py
tests/utils/: test_http_client.py
tools/: disease_to_uniprot.py
