[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drug-discovery-agent"
version = "0.1.0"
description = "Bioinformatics tools with LangChain and MCP support"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "Bio==1.8.0",
    "biopython==1.85",
    "cryptography>=41.0.0",
    "fastmcp>=2.0.0",
    "httpx==0.28.1",
    "keyring>=24.0.0",
    "langchain==0.3.27",
    "langchain_openai==0.3.32",
    "mcp>=1.13.1",
    "openai==1.102.0",
    "python-dotenv==1.1.1",
    "starlette==0.47.3",
    "uvicorn==0.35.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-httpx>=0.30.0",
    "pytest-testmon>=2.0.0",
    "responses>=0.23.0",
    "respx>=0.22.0",
    "keyrings.alt>=4.0.0",
]
dev = [
    "ruff>=0.12.0,<0.13.0",
    "mypy>=1.17.1",
    "pre-commit>=3.0.0",
    "pyinstaller>=6.0.0",
]


[project.scripts]
chat = "drug_discovery_agent.chat:main"
mcp-server = "drug_discovery_agent.interfaces.mcp.server:main"
chat-server = "drug_discovery_agent.chat_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/conftest.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = [
    "tests/auth/test_api_endpoints.py",
    "tests/integration/test_api_key_integration.py",
    "test_e2e_api_key_flow.py"
]

[tool.testmon]
# Exclude integration test patterns to avoid async httpx issues
norecursedirs = ["tests/*integration*"]
ignore_changes = [
    # Ignore external dependencies that don't affect integration tests
    "*/httpx/*",
    "*/urllib3/*",
    "*/requests/*",
]